--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@types/react-dom": "^17.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
-    "recoil": "^0.4.0",
+    "recoil": "^0.6.1",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
